--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -4,7 +4,7 @@
 * {{alter|en|substraction||obsolete}}
 
 ===Etymology===
-Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
+Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}. Can be decomposed to {{suffix|en|subtract|-ion}}
 
 ===Pronunciation===
 * {{IPA|en|/səbˈtɹækʃən/}}
