t+hy:[[{{t-needed}}]] t+es:[[{{t-needed}}]] t+de:[[{{t-needed}}]] t+fr:[[{{t-needed}}]] t+ar:[[{{t-needed}}]] t+ru:[[{{t-needed}}]] t+th:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <consume#62930209>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -169,12 +169,19 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 {{trans-bottom}}
 
 {{trans-top|absorb information}}
+* Arabic: {{t-needed|ar}}
+* Armenian: {{t-needed|hy}}
 * Chinese:
 *: Mandarin: {{t+|cmn|看|tr=kàn}}, {{t+|cmn|閱讀}}, {{t+|cmn|阅读|tr=yuèdú}}, {{t+|cmn|吸收|tr=xīshōu}}
-{{trans-mid}}
 * Dutch: {{t-needed|nl}}
 * Finnish: {{t+|fi|kuluttaa}}
+{{trans-mid}}
+* French: {{t-needed|fr}}
+* German: {{t-needed|de}}
 * Italian: {{t+|it|assorbire}}
+* Russian: {{t-needed|ru}}
+* Spanish: {{t-needed|es}}
+* Thai: {{t-needed|th}}
 {{trans-bottom}}
 
 {{checktrans-top}}
