--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -44,6 +44,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 *** Portuguese {{l|pt|Israel}}
 ** {{desc|ru|Изра́иль||bor=1}}
 * {{desc|obm|𐤉𐤔𐤓𐤀𐤋|bor=1}}
+* {{desc|yi|ישׂראל|tr=yisroel|bor=1}}
 
 ===References===
 * {{cite-book|last=Sachsse|first=Eduard|title=Die Bedeutung des Namens Israel. Eine quellen-kritische Untersuchung|publisher=Carl Georgi, Universitäts-Buchdruckerei und Verlag|location=Bonn|year=1910|lang=de|trans-title=The meaning of the name Israel. A source-critical investigation.|url=https://sammlungen.ub.uni-frankfurt.de/freimann/content/titleinfo/1282767}}
