t+pl:[[licytować]] t+pl:[[zalicytować]] t+pl:[[licytacja]] ([[WT:EDIT|Assisted]]) <bid#62938582>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -121,6 +121,7 @@ From {{der|en|enm|beden}}, from {{der|en|ang|-}} {{m|ang|bēodan||to offer, anno
 *: German Low German: {{t|nds-de|beden}}
 * Norman: {{t-check|nrf|offri}} {{qualifier|Jersey}}
 * Occitan: {{t+|oc|ofrir}}
+* Polish: {{t|pl|licytować|impf}}, {{t|pl|zalicytować|pf}}
 * Portuguese: {{t+|pt|oferecer}}
 * Russian: {{t|ru|[[предлага́ть]] [[цена|це́ну]]|impf}}, {{t|ru|[[предложи́ть]] [[цена|це́ну]]|pf}}
 * Spanish: {{t+|es|pujar}}
@@ -138,6 +139,7 @@ From {{der|en|enm|beden}}, from {{der|en|ang|-}} {{m|ang|bēodan||to offer, anno
 * Hungarian: {{t+|hu|ajánl}}
 * Latin: {{t|la|liceor}}
 * Occitan: {{t+|oc|ofrir}}, {{t+|oc|propausar}}
+* Polish: {{t|pl|licytować|impf}}, {{t|pl|zalicytować|pf}}
 * Spanish: {{t+|es|ofrecer}}, {{t+|es|ofertar}}
 * Swedish: {{t+|sv|bjuda}}
 * Zazaki: {{t|zza|biden}}
@@ -215,7 +217,7 @@ From {{der|en|enm|beden}}, from {{der|en|ang|-}} {{m|ang|bēodan||to offer, anno
 *: Nynorsk: {{t|nn|bod|n}}
 * Occitan: {{t+|oc|ofèrta}}
 * Persian: {{t|fa|دو زن داری|sc=fa-Arab}}
-* Polish: {{t+|pl|oferta|f}}
+* Polish: {{t+|pl|oferta|f}}, {{t+|pl|licytacja|f}}
 * Portuguese: {{t+|pt|licitação|f}}, {{t+|pt|lance|m}}
 * Romanian: {{t-needed|ro}}
 * Russian: {{t|ru|предлага́емая цена́|f}}, {{t+|ru|зая́вка|f}}, {{t+|ru|ста́вка|f}}
