--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -297,6 +297,32 @@ From {{inh|non|gem-pro|*meganą}}, {{m|gem-pro|*maganą}}.
 
 ----
 
+==Polish==
+
+===Etymology===
+From {{bor|pl|en|mega}}.
+
+===Pronunciation===
+* {{pl-IPA}}
+* {{audio|pl|LL-Q809 (pol)-Olaf-mega.wav|Audio}}
+
+===Adjective===
+{{pl-adj|-}}
+
+# {{lb|pl|colloquial}} {{l|en|[[awesome]], [[great]], [[cool]]}}
+#: {{syn|pl|Thesaurus:dobry}}
+
+===Adverb===
+{{pl-adv|-}}
+
+# {{lb|pl|colloquial}} {{l|en|[[awesome]], [[great]], [[cool]]}}
+
+====Further reading====
+* {{R:pl:WSJP}}
+* {{R:PWN}}
+
+----
+
 ==Portuguese==
 
 ===Etymology===
