--- a/en/m/moonstone.720226.wikitext
+++ b/en/m/moonstone.720226.wikitext
@@ -33,7 +33,7 @@
 * Russian: {{t|ru|лу́нный ка́мень|m}}
 * Spanish: {{t|es|piedra de luna|f}}
 * Swedish: {{t+|sv|månsten}}
-* Thai: {{t|th|มุกดา}}, {{t+|th|มุกดาหาร}}, {{t|th|จันทรกานต์}}
+* Thai: {{t|th|มุกดา}}
 {{trans-bottom}}
 
 ===Anagrams===
