--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -35,7 +35,7 @@ The inflected forms {{m|en|bade}}, {{m|en|bad}}, and {{m|en|bidden}} are falling
 
 When ''bidden'' does occur, it is usually in an elevated, ironical, or metaphorical style, e.g "I have ''bidden'' farewell to my prospects of promotion."
 
-When ''bade'' (spelled ''bad'' so rarely that this variant is not mentioned in most dictionaries) is used in formal speech, the pronunciation {{IPAchar|/bæd/}} may be heard. However, when a dated text with the spelling ''bade'' is read aloud or recited (e.g. on stage, in school, or in church etc.) the [[spelling pronunciation]] {{IPAchar|/beɪd/}} is quite usual.{{rfv-pron}}
+When ''bade'' (spelled ''bad'' so rarely that this variant is not mentioned in most dictionaries) is used in formal speech, the pronunciation {{IPAchar|/bæd/}} may be heard. However, when a dated text with the spelling ''bade'' is read aloud or recited (e.g. on stage, in school, or in church etc.) the [[spelling pronunciation]] {{IPAchar|/beɪd/}} is quite usual.{{rfv-pron|en}}
 
 =====Derived terms=====
 * {{l|en|bid adieu}}
