--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -23,5 +23,6 @@
 * French: {{t+|fr|code de la route|m}}
 {{trans-mid}}
 * Hebrew: {{t+|he|חֻקֵּי הַדֶּרֶךְ|m-p|tr=khukey haderekh}}
+* Hungarian: {{t+|hu|KRESZ}}
 * Russian: {{t|ru|пра́вила доро́жного движе́ния|n-p}}
 {{trans-bottom}}
