--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -89,6 +89,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 |weightlifting
 |weight loss
 |weight of the world
+|weight-saving
 |weight-watcher
 |weighty
 |welterweight
