--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -49,9 +49,9 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 ===Noun===
 {{fr-noun|m}}
 
-# [[mic]] (microphone)
-# [[micro#English|micro]] (microcomputer)
-# {{gloss|obsolete}} [[microscope]]
+# {{l|en|mic|gloss=microphone}}; {{clipping of|fr|microphone}}
+# {{l|en|micro|gloss=microcomputer}}; {{clipping of|fr|micro-ordinateur}}
+# {{gloss|obsolete}} {{l|en|microscope}}
 
 ===Further reading===
 * {{R:TLFi}}
