--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -51,7 +51,7 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 
 # {{l|en|mic|gloss=microphone}}; {{clipping of|fr|microphone}}
 # {{l|en|micro|gloss=microcomputer}}; {{clipping of|fr|micro-ordinateur}}
-# {{gloss|obsolete}} {{l|en|microscope}}
+# {{gloss|obsolete}} {{l|en|microscope}}; {{clipping of|fr|microscope}}
 
 ===Further reading===
 * {{R:TLFi}}
