--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -141,7 +141,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Hebrew: {{t+|he|אַרְנָב|m|tr=arnáv}}, {{t+|he|אַרְנֶבֶת|f|tr=arnévet}}
 * Hindi: {{t|hi|ख़रगोश|m|sc=Deva}}, {{t+|hi|शशक|m|sc=Deva}}, {{t|hi|सुस्सा|sc=Deva}}, {{t+|hi|खरहा|sc=Deva}}, {{t+|hi|खरगोश|m}}
 * Hopi: {{t|hop|taavo}}
-* Hungarian: {{t+|hu|nyúl}}, {{t+|hu|házinyúl}}, {{t|hu|házi nyúl}}
+* Hungarian: {{t+|hu|nyúl}}, {{t|hu|házi nyúl}}
 * Hunsrik: {{t|hrx|Kaninche|n}}
 * Icelandic: {{t+|is|kanína}}
 * Ido: {{t+|io|kuniklo}}
