--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -46,7 +46,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 * Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
 * Old Church Slavonic: {{t|cu|ⰵⰹ}}
 * Persian: {{t+|fa|بله|tr=bale}}, {{t+|fa|آره|tr=âre|sc=fa-Arab}}
-* Polish: {{t+|pl|tak}}, {{t+|pl|no}}<!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->, {{t+|pl|ta|m}} {{qualifier|colloquial}}, {{t+|pl|aha|m}}
+* Polish: {{t+|pl|tak}}, {{t+|pl|no}}<!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->, {{t+|pl|aha|m}},  {{t+|pl|ta|m}} {{qualifier|colloquial}}
 * Portuguese: {{t+|pt|sim}}, {{t+|pt|é}}
 * Romanian: {{t+|ro|da}}
 * Russian: {{t+|ru|ага́}}, {{t+|ru|ага́|tr=ahá}}, {{t+|ru|угу́}}, {{t+|ru|угу́|tr=uhú}}, {{t+|ru|так}}, {{t+|ru|ну}}
