--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -667,7 +667,7 @@ From {{bor|pl|he|בית|tr=béyt}}.
 * {{R:PWN}}
 
 [[Category:Polish terms with multiple etymologies]]
-{{c|pl|Aramaic letter names|Bedding|Hebrew letter names}}
+{{c|pl|Aramaic letter names|Babies|Bedding|Hebrew letter names}}
 
 ----
 
