--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -189,6 +189,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa vokalis
 |}}
 {{der4|id|
+| alih bahasa
 | juru bahasa
 | pakar bahasa
 | tata bahasa
