--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -8,7 +8,7 @@
 * {{l|en|aumuce}}
 
 ===Etymology===
-Borrowed from {{bor|en|fro|emit}}, from {{der|en|la|amictus}}, from {{m|la|amiciō}} (see there for more). Compare {{cog|fr|amict}}, {{cog|it|amitto}}, {{cog|pt|amicto}}.
+From {{inh|en|enm|amit}}, from {{der|en|fro|emit}}, from {{der|en|la|amictus}}, from {{m|la|amiciō}} (see there for more). Compare {{cog|fr|amict}}, {{cog|it|amitto}}, {{cog|pt|amicto}}.
 
 ===Noun===
 {{en-noun}}
