/* English */ Decreased number of images since all are visually similar <weasel#63039135>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -1,13 +1,5 @@
 ==English==
-{{multiple images
-|direction = vertical
-|image1 = Mustela frenata.jpg
-|caption1 = A long-tailed '''weasel'''.
-|image2 = Mustela nivalis -British Wildlife Centre-4.jpg
-|caption2 = A  '''weasel''' (1).
-|image3 = Gressoney-Saint-Jean-Museo-IMG 1815.JPG
-|caption3 = A stuffed '''weasel''' (1).
-}}
+[[Image:Mustela nivalis -British Wildlife Centre-4.jpg|thumb|A  '''weasel''' (sense 1).]]
 
 ===Alternative forms===
 * {{l|en|weazel}} {{qual|archaic}}
