--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -4,8 +4,8 @@
 From {{der|en|frm|théorie}}, from {{der|en|LL.|theōria}}, from {{der|en|grc|θεωρία|t=contemplation, speculation, a looking at, things looked at}}, from {{m|grc|θεωρέω|t=I look at, view, consider, examine}}, from {{m|grc|θεωρός|t=spectator}}, from {{m|grc|θέα|t=view}} + {{m|grc|ὁράω|t=I see, look}} [i. e. θέαν ὁράω (théan horáō, “see, look at a view; survey + genitive”)].
 
 ===Pronunciation===
-* {{a|Received Pronunciation|General Australian}} {{IPA|en|/ˈθɪəɹi/|/ˈθiːəɹi/|/ˈθɪɹi/}}
-* {{a|General American}} {{IPA|en|/ˈθiːəɹi/|/ˈθɪɹi/}}
+* {{a|Received Pronunciation|General Australian}} {{IPA|en|/ˈθɪə.ɹi/|/ˈθiː.ə.ɹi/|/ˈθɪɹ.i/}}
+* {{a|General American}} {{IPA|en|/ˈθɪɚ.i/|/ˈθi.ə.ɹi/}}
 * {{audio|en|en-us-theory.ogg|Audio (US)}}
 *: {{rhymes|en|ɪəri}}
 
