--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -617,14 +617,11 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
 
-# To [[blossom]]; to cause to [[bloom]] or blossom.
-#* '''1599''', [[w:William Shakespeare|William Shakespeare]], ''[[w:Much Ado About Nothing|Much Ado About Nothing]]'', [[s:Much Ado About Nothing (Shakespeare)|Act 4 Scene 1]]
-#*: You seem to me as [[w:Diana (mythology)|Dian]] in her [[orb]],
-#*: As chaste as is the bud [[ere]] it be '''blown''';
-#* '''1667''', [[w:John Milton|John Milton]], Paradise Lost, [[s:Paradise Lost (1667)/Book V|Book 5]]
-#*: How '''blows''' the citron grove.
-#* {{quote-book|en|year=1784|author=William Cowper|title=Tirocinium; or, A Review of Schools|passage=Boys are at best but pretty buds '''unblown''',<br>Whose scent and hues are rather guessed than known;}}
-#* {{quote-journal|en|author=Mark Diacono|authorlink=Mark Diacono|title=How to grow and cook cauliflower, 2015's trendiest veg: Tricky to grow, boring to boil&nbsp;... so why is the outmoded cauliflower back at the culinary cutting edge? &#91;print version: Cauliflower power, 24 January 2015, p.&nbsp;G3&#93;|url=http://www.telegraph.co.uk/gardening/11362662/How-to-grow-and-cook-cauliflower-2015s-trendiest-veg.html|work={{w|The Daily Telegraph}} (Gardening)|date=26 January 2015|passage=[[w:Romanesco broccoli|Romanesco]] is slow to '''blow''' and more forgiving to grow than most cauliflowers, while being perhaps the most delicious and certainly the nuttiest-flavoured of the lot.}}
+# {{senseid|en|blossom}} To [[blossom]]; to cause to [[bloom]] or blossom.
+#* {{RQ:Shakespeare Much Ado About Nothing|act=IV|scene=i|page=114|column=2|passage=You ſeeme to me as ''Diane'' in her Orbe, / As chaſte as is the budde ere it be '''blowne''':}}
+#* {{RQ:Milton Paradise Lost|book=V|passage=How '''blows''' the citron grove.}}
+#* {{quote-book|en|year=1784|author=William Cowper|title=Tirocinium; or, A Review of Schools|passage=Boys are at best but pretty buds '''unblown''', / Whose scent and hues are rather guessed than known;}}
+#* {{quote-journal|en|author=Mark Diacono|authorlink=Mark Diacono|title=How to grow and cook cauliflower, 2015's trendiest veg|url=http://www.telegraph.co.uk/gardening/11362662/How-to-grow-and-cook-cauliflower-2015s-trendiest-veg.html|work={{w|The Daily Telegraph}} (Gardening)|date=26 January 2015|passage=[[w:Romanesco broccoli|Romanesco]] is slow to '''blow''' and more forgiving to grow than most cauliflowers, while being perhaps the most delicious and certainly the nuttiest-flavoured of the lot.}}
 
 =====Related terms=====
 * {{l|en|full-blown}}
