Added descendants <aanbidden#63090829>

--- a/en/a/aanbidden.4464.wikitext
+++ b/en/a/aanbidden.4464.wikitext
@@ -25,3 +25,4 @@ From {{inh|nl|dum|aenbidden}}. Equivalent to {{affix|nl|aan-|bidden}}.
 
 ====Descendants====
 * {{desc|af|aanbid}}
+* {{desc|dcr|bed aan|bor=1}}, {{l|dcr|bid an}}
