/* Derived terms */ 'bid one's time' is not a derivation, it is a error for 'bide one's time' <bid#63091422>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -99,8 +99,8 @@ From {{der|en|enm|beden}}, from {{der|en|ang|-}} {{m|ang|bēodan||to offer, anno
 #*: All night she spent in '''bidding''' of her bedes, / And all the day in doing good and godly deedes.
 
 =====Derived terms=====
-* {{l|en|bid one's time}}
 * {{l|en|forbid}}
+* {{l|en|misbid}}
 
 =====Translations=====
 {{trans-top|intransitive: to make an offer}}
