t+yi:[[דעמאָלט]] t-balance ([[WT:EDIT|Assisted]]) <then#63093261>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -323,6 +323,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Urdu: {{t|ur|تو|tr=to|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|thì}}, {{t+|vi|thế thì}}, {{t+|vi|vậy thì}}
 * Walloon: {{t+|wa|dabôrd}}, {{t+|wa|adon}}
+* Yiddish: {{t|yi|דעמאָלט}}
 * Zazaki: {{t|zza|no hal}}
 {{trans-bottom}}
 
