--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1147,6 +1147,87 @@ From {{der|smr|poz-pro|*əpat}}, from {{der|smr|map-pro|*Səpat}}.
 * {{l|tl|tsaka}}
 
 ----
+==Tlingit==
+===Pronunciation===
+{{IPA|tli|[ʔʌ̀tʰ]}}
+===Pronoun===
+{{head|tli|pronoun}}
+# fourth-person non-human object pronoun (roughly equivalent to "[[something]]")
+# fourth-person non-human possessive pronoun (roughly equivalent to "something's")
+====Derived Terms====
+{{col4-u|tli
+|at ashoowatán
+|at áatʼláni
+|at chʼéx̱ʼdi
+|at danáayi
+|at dáli
+|at daakayéx̱aa lítaa
+|at daayí
+|at daayí ḵákw
+|at daa.ideidí
+|at dultʼéexʼ
+|at duxáshgu
+|at gutu.ádi
+|at gutú
+|at éewu
+|at kachʼáakʼu
+|at kahéeni
+|at kasayé
+|at katáxʼaa
+|at katé
+|at kax̱útʼti
+|at ka.áax̱u
+|at káx̱ adéli
+|at kaawaxúkw
+|at kaayí
+|at kuna.áaḵw
+|at kookeidí
+|at kʼé
+|at layeix̱ sʼaatí
+|at la.át
+|at luxʼaaḵáawu
+|at natéeyi
+|at sag̱ahaayí
+|at sax̱án
+|at sʼaan.ax̱w dzáas
+|at sʼéilʼi
+|at shax̱ishdi dzáas
+|at shí
+|at shí ḵóok
+|at sheexʼí
+|at sheeyí
+|at shooḵ
+|at tugáni
+|at tux̱ʼwánsʼ
+|at tʼaa.éexʼi
+|at tsʼíkʼwti
+|at uhéini
+|at wujaaḵw
+|at wulyáaḵw
+|at wulyú
+|at wuskú yís át ḵuwduwateen
+|at wuskóowu
+|at wooskú daakahídi
+|at xáshdi téel
+|at xáshdi xʼóow
+|at xʼaan aaní
+|at xʼaan hídi
+|at x̱aagú shakee.át
+|at x̱ʼawóosʼ
+|at x̱ʼéeshi
+|at yahaayí xʼúxʼ kshaxeet
+|at yana.á
+|at yawusḵá
+|at yátxʼi daa yoo at kooneik ḵáa
+|at yáa awuné
+|atkʼátskʼu
+|atxaayí
+|atx̱a át
+|atx̱á
+|atx̱aaxʼí sáani
+|atyátxʼi
+|at.óow
+}}
 
 ==Tocharian B==
 
