--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -15,7 +15,7 @@ Of {{der|en|trk|-}} origin; compare {{cog|tr|balkan||wooded mountain range}}.<re
 ===Proper noun===
 {{en-proper noun}}
 
-# {{place|en|geographical region|in southeastern|cont/Europe}}, roughly equivalent to the area covered by [[Albania]], [[Bosnia and Herzegovina]], [[Bulgaria]], [[Croatia]], [[Greece]], [[North Macedonia]], [[Montenegro]], [[Serbia]] (and [[Kosovo]]), sometimes including [[Romania]], [[Slovenia]], and European [[Turkey]]. {{defdate|19th c.}}
+# {{place|en|geographical region|in southeastern|cont/Europe}}, roughly equivalent to the area covered by [[Albania]], [[Bosnia and Herzegovina]], [[Bulgaria]], [[Croatia]], [[Greece]], [[Kosovo]], [[North Macedonia]], [[Montenegro]], [[Serbia]], sometimes including [[Romania]], [[Slovenia]], and European [[Turkey]]. {{defdate|19th c.}}
 #* '''2002''' — Dennis P. Hupchick, ''The Balkans: From Constantinople to Communism'', p.104:
 #*: As the Ottomans' victories in the '''Balkans''' multiplied, increasing numbers of Anatolian warriors flocked to their ranks, and their territorial conquests grew.
 #* '''2015''' — Anastas Vangeli, ''On the Growing Cooperation Between China and the Western Balkans'', in: Nikolaos Papakostas and Nikolaos Pasamitros (editors), ''An Agenda for the Western Balkans: From Elite Politics to Social Sustainability'', Stuttgart, p.182:
