--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -425,6 +425,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 # {{lb|en|intransitive|followed by|_|[[around]], [[about]], etc.}} To move about in an [[aimless]] fashion.
 #: {{ux|en|I didn't have much to do, so I just '''milled''' around the town looking at the shops.}}
 #* {{RQ:Kipling Second Jungle Book|passage=The deer and the pig and the nilghai were '''milling''' round and round in a circle of eight or ten miles radius, while the Eaters of Flesh skirmished round its edge.}}
+#* {{quote-journal|en|author=Sheera Frenkel|title=Mark Zuckerberg and Sheryl Sandberg’s Partnership Did Not Survive Trump|work=The New York Times|date=2021-07-08|url=https://www.nytimes.com/2021/07/08/business/mark-zuckerberg-sheryl-sandberg-facebook.html|issn=0362-4331|author2=Cecilia Kang|passage=As guests '''milled''' around them, he [Zuckerberg] described his goal of turning every person in the country with an internet connection into a Facebook user.}}
 # {{lb|en|transitive}} To cause to mill, or circle around.
 #: {{ux|en|to '''mill''' cattle}}
 # {{lb|en|zoology|of air-breathing creatures}} To [[swim]] [[underwater]].
