/* Pronunciation */ No one pronounces /j/ before /i/ <ישראל#63132054>

--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -6,7 +6,7 @@
 The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be from {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". See {{m|en|Israel}} for more.
 
 ===Pronunciation===
-* {{a|IL}} {{IPA|he|/jis.ʁaˈ(ʔ)el/}}
+* {{a|IL}} {{IPA|he|/is.ʁaˈ(ʔ)el/}}
 * {{a|Ashkenazi Hebrew}} {{IPA|he|/jis.rɔ.ejl/|/jis.ru.ajl/}}
 * {{a|Sephardi Hebrew}} {{IPA|he|/jis.raˈ(ʔ)el/}}
 * {{a|Tiberian}} {{IPA|he|/jis.rɔˈʔel/}}
