--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -189,7 +189,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 * Plautdietsch: {{t|pdt|wada}}
 * Polish: {{t+|pl|ponownie}}, {{t+|pl|znowu}}, {{t|pl|jeszcze raz}}, {{t+|pl|znów}}
 * Portuguese: {{t+|pt|de novo}}, {{t|pt|outra vez}}, {{t+|pt|novamente}}
-* Romanian: {{t+|ro|iarăși}}, {{t|ro|din nou}}
+* Romanian: {{t+|ro|iarăși}}, {{t|ro|din nou}}, {{t+|ro|iar}}
 * Romansch: {{t|rm|danovamain}} {{qualifier|Rumantsch Grischun, Sursilvan}}, {{t|rm|daniev}} {{qualifier|Sursilvan}}, {{t|rm|danovmeing}}, {{t|rm|danievmeing}} {{qualifier|Sutsilvan}}, {{t|rm|danovamaintg}} {{qualifier|Surmiran}}, {{t|rm|danövmaing}}, {{t|rm|danöv}} {{qualifier|Puter, Vallader}}, {{t|rm|puspè}} {{qualifier|Rumantsch Grischun}}, {{t|rm|puspei}} {{qualifier|Sursilvan}}, {{t|rm|puspe}} {{qualifier|Sutsilvan, Surmiran}}, {{t|rm|darcho}} {{qualifier|Puter}}, {{t|rm|darcheu}} {{qualifier|Vallader}}
 * Russian: {{t+|ru|опя́ть}}, {{t+|ru|сно́ва}}, {{t|ru|ещё раз}}
 * Sanskrit: {{t+|sa|पुनर्}}
