--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -41,6 +41,7 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 {{trans-top|highest limit}}
 * Armenian: {{t+|hy|մաքսիմում}}
 * Bulgarian: {{t+|bg|максимум|m}}
+* Catalan: {{t+|ca|màxim|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|最大|tr=zuìdà}}, {{t+|cmn|極大}}, {{t+|cmn|极大|tr=jídà}}
 * Czech: {{t+|cs|maximum|n}}
@@ -53,10 +54,10 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 * Greek: {{t|el|ανώτατο όριο|n}}, {{t+|el|άκρον άωτον|n}}
 * Hebrew: {{t|he|מַכְּסִימוּם|m|tr=maximum}}, {{t+|he|מֵרַב|m|tr=mēráv}}
 * Ido: {{t+|io|maximo}}
+{{trans-mid}}
 * Indonesian: {{t+|id|maksimum}}, {{t+|id|plafon}}, {{t+|id|pagu}}
 * Italian: {{t+|it|massimo|m}}
 * Japanese: {{t+|ja|最大|tr=さいだい, saidai}}, {{t|ja|極大|tr=きょくだい, kyokudai}}
-{{trans-mid}}
 * Latin: {{t+|la|maximum}}
 * Malay: {{t|ms|maksimum}}
 * Maori: {{t|mi|mōrahi}}, {{t|mi|tihi}}
