Add Ainu term <sir#63171780>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -212,6 +212,19 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 
 ----
 
+==Ainu==
+
+===Pronunciation===
+* {{ain-IPA}}
+
+===Noun===
+{{head|ain|noun}}
+# [[appearance]]
+# [[earth]]
+# [[land]], [[mountain]]
+
+----
+
 ==Scottish Gaelic==
 
 ===Etymology===
