/* Franco-Provençal */ <chin#63200262>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -411,6 +411,11 @@ From {{inh|frp|la|canem}}, accusative singular of {{m|la|canis}}.
 
 # [[dog]]
 
+====Coordinate terms====
+* {{l|frp|china}}
+
+{{topic|frp|Canids}}
+
 ----
 
 ==Japanese==
