--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -267,6 +267,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Walloon: {{t+|wa|robete}}
 * Warlpiri: {{t|wbp|yurapiti}}
 * Welsh: {{t+|cy|cwningen|f}}
+* West Flemish: {{t|vls|keun|n}}
 * West Frisian: {{t|fy|knyn|c|n}}
 * Wolof: {{t|wo|njomboor|alt=njomboor ji}}
 * Yagnobi: {{t|yai|харгуш}}
