--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -237,6 +237,10 @@ See {{m|nl|rotten}}
 =====Inflection=====
 {{nl-decl-adj|rotte}}
 
+====Derived terms====
+* {{l|nl|rothumeur}}
+* {{l|nl|rotvaart}}
+
 ====Noun====
 {{nl-noun|n|-en|rotje}}
 
@@ -253,6 +257,7 @@ From {{inh|nl|dum|rotte}}.
 ====Derived terms====
 * {{l|nl|oude rot}}
 * {{l|nl|landrot}}
+* {{l|nl|zeerot}}
 
 ===Etymology 3===
 From {{inh|nl|dum|rote}}.
