--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -1,6 +1,5 @@
 {{also|moneybag}}
 ==English==
-[[File:Mcol money bag.svg|thumb|200px|upright|A bag with a [[dollar sign]].]]
 
 ===Alternative forms===
 * {{l|en|moneybag}}
@@ -46,7 +45,8 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-{{Commonscat|Moneybags}}
+===Further reading===
+* {{commonscatlite|Moneybags}}
 
 ===Anagrams===
 * {{anagrams|en|a=abegmnoy|bogey man|bogeyman}}
