--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -85,7 +85,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 * Albanian: {{t+|sq|lidh}}
 * Arabic: {{t|ar|أَسَرَ}}, {{t|ar|رَبَطَ}}
 * Armenian: {{t+|hy|կապել}}
-* Basque: {{t-needed|eu}}
+* Basque: {{t|eu|lotu}}
 * Belarusian: {{t|be|звя́зваць|impf}}, {{t|be|звяза́ць|pf}}
 * Burmese: {{t+|my|တုပ်}}, {{t+|my|ချည်}}
 * Catalan: {{t+|ca|nugar}}, {{t+|ca|lligar}}
@@ -122,7 +122,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 * Middle Dutch: {{t|dum|binden}}
 * Middle English: {{t|enm|binden}}
 * Middle Low German: {{t|gml|binden}}
-* Mongolian: {{t-needed|mn}}
+* Mongolian: {{t|mn|уях}}
 * North Frisian:
 *: Föhr-Amrum and Sylt: {{t|frr|binj}}
 *: Helgoland: {{t|frr|bin}}
