t+sd:[[ٻڌڻ]] ([[WT:EDIT|Assisted]]) <bind#63338783>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -140,6 +140,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 * Russian: {{t+|ru|свя́зывать|impf}}, {{t+|ru|свя́зать|pf}}, {{t+|ru|вяза́ть|impf}}
 * Sanskrit: {{t+|sa|द्यति}}, {{t+|sa|मव्यति}}
 * Saterland Frisian: {{t|stq|biende}}
+* Sindhi: {{t|sd|ٻَڌَڻُ}}
 * Spanish: {{t+|es|atar}}
 * Swahili: {{t+|sw|funga|alt=kufunga}}
 * Swedish: {{t+|sv|binda}}
