--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -59,7 +59,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 * Swedish: {{t+|sv|ja|n}}
 * Thai: {{t+|th|เออ}}
 * Ukrainian: {{t|uk|еге́}}
-* Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}}
+* Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}} {{qualifier|informal}}
 * Vietnamese: {{t|vi|ừ}} {{qualifier|informal}}, {{t+|vi|ờ}} {{qualifier|informal}}
 * Volapük: {{t+|vo|si}}
 * Welsh: {{t|cy|iah}}
