--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -22,6 +22,7 @@
 * Chinese:
 *: Mandarin: {{t+|cmn|劍齒虎|sc=Hani}}, {{t+|cmn|剑齿虎|tr=jiànchǐhǔ|sc=Hani}}
 * Danish: {{t|da|sabelkat|c}}
+* Dutch: {{t|nl|sabeltijger|m}}
 * Esperanto: {{t|eo|smilodonto}}
 * Finnish: {{t|fi|sapelihammastiikeri}}
 * French: {{t+|fr|tigre à dents de sabre|m}}
