t+fo:[[sagartonn]] ([[WT:EDIT|Assisted]]) <sawtooth#63340225>

--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -24,7 +24,7 @@ From {{compound|en|saw|tooth}}
 *: Cantonese: {{t|yue|鋸齒}}, {{t|yue|锯齿|tr=goe3 ci2}}
 *: Mandarin: {{t+|cmn|鋸齒}}, {{t+|cmn|锯齿|tr=jùchǐ}}
 * Dutch: {{t+|nl|zaagtand|m}}
-* Faroese: {{t|fo|sagtonn|f}}
+* Faroese: {{t|fo|sagtonn|f}}, {{t|fo|sagartonn|f}}
 * French: {{t|fr|[[dent]] [[de]] [[scie]]|m}}
 {{trans-mid}}
 * German: {{t+|de|Sägezahn|m}}
