--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -324,6 +324,7 @@ From {{inh|nl|dum|college}}, from {{der|nl|frm|college}}, from {{der|nl|la|collÄ
 ====Derived terms====
 * {{l|nl|collegejaar}}
 * {{l|nl|collegezaal}}
+* {{l|nl|gastcollege}}
 
 ====Related terms====
 * {{l|nl|collega}}
