/* Noun */ quote <staff#63344406>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -27,6 +27,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 # {{lb|en|plural {{m|en|staff}} or {{m|en|staffs}}}} The [[employee]]s of a [[business]].
 #: {{ux|en|The company employed 10 new [[member of staff|members of '''staff''']] this month.}}
 #: {{ux|en|The company has taken on 1600 more highly-paid '''staff'''.}}
+#* {{quote-journal|en|year=1940|month=July|title=Notes and News: A Magnificent Transport Achievement|journal=Railway Magazine|page=419|text=No department of the Southern Railway escaped some share of the work involved, and the outdoor traffic and locomotive '''staffs''' in particular were engaged literally night and day, snatching a few hours' sleep as opportunity offered, until the task was completed.}}
 #* {{quote-journal|en|date=December 16, 2011|author=Denis Campbell|work=Guardian
 |title=[http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients Hospital staff 'lack skills to cope with dementia patients']
 |passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions".}}
