--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -206,7 +206,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Old English: {{t|ang|cinn|n|alt=ċinn}}
 *: Middle English: {{t|enm|chin}}
 * Ossetian: {{t|os|роцъо|sc=Cyrl}}, {{t|os|зекъӕ|sc=Cyrl}} {{qualifier|Digor}}
-* Ottoman Turkish: {{t|ota|چانه|tr=çâne|sc=ota-Arab}}, {{t|ota|زقن|tr=zekan|sc=ota-Arab}}
+* Ottoman Turkish: {{t|ota|چكه|tr=çeñe|sc=ota-Arab}}
 * Pashto: {{t+|ps|زنه|tr=zana}}
 * Persian: {{t+|fa|چانه|tr=čâne|sc=fa-Arab}}, {{t+|fa|چکن|tr=čakan|sc=fa-Arab}}
 * Piedmontese: {{t|pms|manton|m}}
