/* English */ wiki > lite <Balkans#63428235>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -1,6 +1,5 @@
 ==English==
 [[Image:Balkan_Peninsula.svg|thumb|250px|Balkan peninsula (as defined by the Danube-Sava-Kupa line)]]
-{{wikipedia}}
 
 ===Alternative forms===
 * {{alter|en|Balcans||dated}}
@@ -97,6 +96,9 @@ Of {{der|en|trk|-}} origin; compare {{cog|tr|balkan||wooded mountain range}}.<re
 * Ukrainian: {{t|uk|Балкани|m-p}}
 * Vietnamese: {{t|vi|Balkan}}
 {{trans-bottom}}
+
+====Further reading====
+* {{pedialite|lang=el}}
 
 ===References===
 <references/>
