--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{der|en|fro|consumpcion}}, from {{der|en|la|consumptio}}.
+From {{der|en|fro|consumpcion}}, from {{der|en|la|consumptio}}. Equivalent to {{suffix|en|consume|ion}}.
 
 ===Pronunciation===
 * {{IPA|en|/kənˈsʌmp.ʃən/}}
