--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -10,8 +10,9 @@ From {{der|en|ang|Ēostre|}}, {{m|ang|Ēastre||a word referring to "the rising d
 {{en-proper noun}}
 {{wikipedia}}
 
+# A West Germanic goddess of the spring season.
 # {{lb|en|paganism}} A modern invented [[pagan]] festival celebrated either in March or April to welcome the Spring, also called [[Ostara]] or [[Easter]].
-# A [[putative]] [[Anglo-Saxon]] seasonal reference.
+# {{rfv-sense|en}} {{n-g|A [[putative]] [[Anglo-Saxon]] seasonal reference.}}
 
 ===References===
 * Pete Jennings (1998), ''The Norse Tradition: A Beginner's Guide'', Headway, {{ISBN|0-340-72082-4}}, p. 40.
