/* Derived terms */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <minimum#63437494>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -192,6 +192,7 @@ Borrowed from {{bor|nl|la|minimum}}.
 * {{l|fr|au minimum}}
 * {{l|fr|minimum syndical}}
 * {{l|fr|salaire minimum}}
+* {{l|fr|strict minimum}}
 
 ===Further reading===
 * {{R:TLFi}}
