--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -1,5 +1,7 @@
 {{also|estado-unidense}}
 ==Galician==
+===Pronunciation===
+* {{IPA|gl|/ɪs.ta.ðow.niˈðen.sɪ/}}
 
 ===Etymology===
 {{suffix|gl|Estados Unidos|ense|gloss1=United States}}
