--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -173,6 +173,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 *: Bokmål: {{t+|nb|vekt|m|f}}
 * Occitan: {{t+|oc|pes|m}}
 * Old English: {{t|ang|ġewiht|n}}
+* Oriya: {{t+|or|ଭାର}}
 * Ossetian: {{t|os|уӕз}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
 * Plautdietsch: {{t+|pdt|Wicht|f}}
