--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -251,3 +251,11 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 
 [[Category:en:Hides]]
 [[Category:en:Leatherworking]]
+
+----
+==Yola==
+ 
+===Verb===
+{{head|yol|verb}}
+
+# {{alt form|yol|luther}}
