--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -16,6 +16,10 @@ Forms.
 ===Etymology 2===
 From {{inh|en|enm|oure}}, from {{inh|en|ang|ūr}}, from {{inh|en|gmw-pro|*ūr}}, from {{inh|en|gem-pro|*ūraz}}, {{m|gem-pro|*ūrô}}. Perhaps a {{doublet|en|ure|urus|nocap=1}}.
 
+===Pronunciation===
+* {{a|RP}} {{IPA|en|/ˈaʊə(ɹ)/}}
+* {{a|GA}} {{IPA|en|/ˈaʊ(ə)ɹ/}}
+
 ====Noun====
 {{en-noun}}
 
