t+os:[[дымын]] ([[WT:EDIT|Assisted]]) <blow#63496606>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -187,6 +187,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
 * Occitan: {{t+|oc|bufar}}
 * Old Frisian: {{t|ofs|blā}}
+* Ossetian: {{t|os|дымын}}
 * Persian: {{t+|fa|وزیدن|tr=vazīdan}}
 * Polish: {{t+|pl|dmuchać|impf}}, {{t+|pl|dąć|impf}}, {{t+|pl|wiać|impf}}
 * Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}, {{t+|pt|bufar}}
