--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -31,7 +31,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{RQ:Macaulay History of England|chapter=13|passage=With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.}}
 # {{senseid|en|to be present at}}{{lb|en|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings; to regularly go to (an event or place). {{defdate|from 17th c.}}
 #: {{ux|en|Children must '''attend''' primary school.}}
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}| title={{w|The Celebrity}}| chapter=5| passage=In the eyes of Mr. Farquhar Fenelon Cooke the apotheosis of the Celebrity was complete. The people of Asquith were not only willing to '''attend''' the house-warming, but had been worked up to the pitch of eagerness. The Celebrity as a matter of course was master of ceremonies.}}
+#* {{RQ:Churchill Celebrity|chapter=5|passage=In the eyes of Mr. Farquhar Fenelon Cooke the apotheosis of the Celebrity was complete. The people of Asquith were not only willing to '''attend''' the house-warming, but had been worked up to the pitch of eagerness. The Celebrity as a matter of course was master of ceremonies.}}
 #* '''1994''', {{w|Nelson Mandela}}, ''{{w|Long Walk to Freedom}}'', Abacus 2010, p. 20:
 #*: I '''attended''' a one-room school next door to the palace and studied English, Xhosa, history and geography.
 # {{lb|en|intransitive|legal}} To go to (a place) for some purpose (with {{m|en|at}}).
