--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -176,9 +176,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 {{en-adj|-}}
 
 # [[made|Made]] of leather.
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=2
-|passage=Sunning himself on the board steps, I saw for the first time Mr. Farquhar Fenelon Cooke.{{...}}A silver snaffle on a heavy '''leather''' watch guard which connected the pockets of his corduroy waistcoat, together with a huge gold stirrup in his Ascot tie, sufficiently proclaimed his tastes.}}
+#* {{RQ:Churchill Celebrity|chapter=2|passage=Sunning himself on the board steps, I saw for the first time Mr. Farquhar Fenelon Cooke.{{...}}A silver snaffle on a heavy '''leather''' watch guard which connected the pockets of his corduroy waistcoat, together with a huge gold stirrup in his Ascot tie, sufficiently proclaimed his tastes.}}
 # Referring to one who wears leather clothing (motorcycle jacket, chaps over 501 jeans, boots), especially as a sign of sadomasochistic homosexuality.
 
 ====Translations====
