--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -21,9 +21,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 #: {{ux|en|He was happy '''then'''.}}
 #* {{RQ:KJV|Genesis|12|6}}
 #*: And the Canaanite was '''then''' in the land.
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=1
-|passage=In the old days, to my commonplace and unobserving mind, he gave no evidences of genius whatsoever. He never read me any of his manuscripts,&nbsp;[&hellip;], and therefore my lack of detection of his promise may in some degree be pardoned. But he had '''then''' none of the oddities and mannerisms which I hold to be inseparable from genius, and which struck my attention in after days when I came in contact with the Celebrity.}}
+#* {{RQ:Churchill Celebrity|chapter=1|passage=In the old days, to my commonplace and unobserving mind, he gave no evidences of genius whatsoever. He never read me any of his manuscripts,&nbsp;[&hellip;], and therefore my lack of detection of his promise may in some degree be pardoned. But he had '''then''' none of the oddities and mannerisms which I hold to be inseparable from genius, and which struck my attention in after days when I came in contact with the Celebrity.}}
 # {{lb|en|temporal location}} Soon afterward.
 #: {{ux|en|He fixed it, '''then''' left.}}
 #: {{ux|en|Turn left, '''then''' right, '''then''' right again, '''then''' keep going until you reach the service station.}}
