Move to template (semi-automated) <then#63510665>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -32,9 +32,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 |passage='''Then''' there came a reg'lar terror of a sou'wester same as you don't get one summer in a thousand, and blowed the shanty flat and ripped about half of the weir poles out of the sand. We spent consider'ble money getting 'em reset, and '''then''' a swordfish got into the pound and tore the nets all to slathers, right in the middle of the squiteague season.}}
 # {{lb|en|sequence}} Next in order; in addition.
 #: {{ux|en|There are three green ones, '''then''' a blue one.}}
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=5
-|passage='''Then''' came a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps, with something of the stately pose which Richter has given his Queen Louise on the stairway, and the light of the reflector fell full upon her.}}
+#* {{RQ:Churchill Celebrity|chapter=5|passage='''Then''' came a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps, with something of the stately pose which Richter has given his Queen Louise on the stairway, and the light of the reflector fell full upon her.}}
 #* {{quote-journal|en|date=2013-07-19|author={{w|Peter Wilby}}
 |volume=189|issue=6|page=30|magazine={{w|The Guardian Weekly}}
 |title=[http://www.theguardian.com/education/2013/jul/01/education-michael-gove-finland-gcse Finland spreads word on schools]
