--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -119,7 +119,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 *: Cyrillic: {{t|sh|о̏нда̄}}, {{t|sh|та̀да̄}}
 *: Roman: {{t+|sh|ȍndā}}, {{t+|sh|tàdā}}
 * Slovak: {{t|sk|vtedy}}
-* Slovene: {{t|sl|nató}}
+* Slovene: {{t|sl|takrat}}, {{t|sl|tedaj}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|pótom}}, {{t|dsb|pón}}
 * Spanish: {{t+|es|entonces}}, {{t|es|en aquel entonces}}
