t+udi:[[боъкъ]] ([[WT:EDIT|Assisted]]) <pig#63518524>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -360,6 +360,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Turkmen: {{tt|tk|doňuz}}
 * Tuvan: {{tt|tyv|хаван}}
 * Ubir: {{tt|ubr|foro}}
+* Udi: {{t|udi|боъкъ}}
 * Udmurt: {{tt|udm|парсь}}
 * Ukrainian: {{tt|uk|свиня́|f}}
 * Urat: {{tt|urt|hro'}}
