--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -57,6 +57,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}, {{t|ga|bláthnaid|f}} {{qualifier|female}}
 * Italian: {{t+|it|ermellino|m}}
 * Japanese: {{t+|ja|おこじょ|tr=okojo}}
+* Kazakh: {{t|kk|ақкіс}}
 * Kipchak: {{t|qwm|ախ աս}}
 * Korean: {{t|ko|북방족제비}}
 * Kurdish:
