/* Translations */ <executive order#63593291>

--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -11,7 +11,7 @@
 * Chinese:
 *: Cantonese: {{t|yue|行政命令|tr=hang4 zing3 ming6 ling6}}
 *: Mandarin: {{t+|cmn|行政命令|tr=xíngzhèng mìnglìng}}
-* Finnish: {{t+|fi|asetus}} {{q|closest equivalent}}
+* Finnish: {{t|fi|[[presidentti|presidentin]] [[asetus]]}}, {{t+|fi|asetus}} {{q|closest equivalent}}
 * French: {{t+|fr|ordonnance|f}}
 {{trans-mid}}
 * Greek: {{t|el|πράξη νομοθετικού περιεχομένου|f}}
