--- a/en/v/voornaam.4105.wikitext
+++ b/en/v/voornaam.4105.wikitext
@@ -46,5 +46,8 @@ From {{inh|nl|dum|voorneem}}, {{m|dum|voornaem}}, from {{der|nl|gmh|vornēme}}.
 =====Derived terms=====
 * {{l|nl|voornamelijk}}
 
+=====Descendants=====
+* {{desc|dcr|voornaam}}
+
 [[Category:Dutch heteronyms]]
 [[Category:nl:Onomastics]]
