--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -127,6 +127,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Bouyei: {{tt|pcc|duezmul}}, {{tt|pcc|mul}}
 * Breton: {{tt+|br|pemoc'h|m}}
 * Brunei Malay: {{tt|kxd|bayi}}
+* Budukh: {{t|bdk|вак}}
 * Buginese: {{tt|bug|bawi}}
 * Bulgarian: {{tt+|bg|свиня́|f}}
 * Burmese: {{tt+|my|ဝက်}}
