t+pl:[[gronostaje]] ([[WT:EDIT|Assisted]]) <ermine#63607806>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -119,6 +119,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Norwegian:
 *: Bokmål: {{t|nb|hermelin|m}}
 *: Nynorsk: {{t|nn|hermelin|m}}
+* Polish: {{t|pl|gronostaje|m-p}}
 * Russian: {{t+|ru|горноста́й|m}}
 * Spanish: {{t+|es|armiño|m}}
 * Volapük: {{qualifier|untanned}} {{t|vo|härminaskin}}, {{t|vo|härminapläd}}, {{t|vo|visafot}}
