--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -26,6 +26,19 @@ Borrowed from {{bor|nl|id|bahasa}}, ultimately from {{der|nl|sa|भाषा||la
 
 # {{lb|nl|colloquial|Netherlands}} [[Indonesian]] language.
 
+----
+==English==
+
+===Etymology===
+From {{bor|en|id|bahasa|t=language}} and {{bor|en|ms|bahasa|t=language}}.
+
+====Noun====
+{{en-noun|head=|pl=-}}
+
+# {{lb|id|colloquial|proscribed}} {{l|en|Indonesian}} and {{l|en|Malay}} {{l|en|language}}.
+
+----
+
 ==Filipino==
 
 ===Etymology===
