--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -33,7 +33,7 @@ Borrowed from {{bor|nl|id|bahasa}}, ultimately from {{der|nl|sa|भाषा||la
 From {{bor|en|id|bahasa|t=language}} and {{bor|en|ms|bahasa|t=language}}.
 
 ====Noun====
-{{en-noun|head=|pl=-}}
+{{en-noun|head=}}
 
 # {{lb|id|colloquial|proscribed}} {{l|en|Indonesian}} and {{l|en|Malay}} {{l|en|language}}.
 
