/* English */fix IPA <quadrilateral#63651879>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -1,15 +1,13 @@
 {{also|quadrilatéral}}
 ==English==
 [[File:Quadrilateral ABCDE.png|thumb|right|200px|quadrilateral]]
+{{Wikipedia}}
 
 ===Etymology===
 From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||sided}}
 
-{{wikipedia}}
-
 ===Pronunciation===
-* {{IPA|en|/ˌkwɒd.ɹəˈlæt.əɹ.əl/}}
-* {{enPR|kwäd'-rə-lăt′-ər-əl}}
+* {{a|US}} {{IPA|en|/ˌkwɑd.ɹəˈlæt.ɚ.əl/}}; {{enPR|kwäd'rə-lăt′ər-əl}}
 * {{audio|en|En-us-quadrilateral.ogg|Audio (US)}}
 * {{audio|en|En-ca-quadrilateral.oga|Audio (CA)}}
 * {{rhymes|en|ætəɹəl}}
