--- a/en/l/laverock.720420.wikitext
+++ b/en/l/laverock.720420.wikitext
@@ -6,7 +6,9 @@ From {{inh|en|enm|laveroc}}, {{m|enm|laverke}}, from {{inh|en|ang|lāferce}}, va
 ===Noun===
 {{en-noun}}
 
-# {{alternative form of|en|lark}} {{qual|the bird}}
+# {{alternative form of|en|lark||the bird}}
+#* '''1902''', John Buchan, ''The Outgoing of the Tide''
+#*: She was young and blithe, with a face like an April morning, and a voice in her that put the '''laverocks''' to shame.
 
 [[Category:en:Larks]]
 
