--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -23,12 +23,12 @@ Borrowed from {{bor|en|fr|monarchisme}}
 * Esperanto: {{t|eo|monarĥismo}}, {{t|eo|monarkismo}}
 * Estonian: {{t|et|monarhism}}
 * Finnish: {{t+|fi|monarkismi}}
-{{trans-mid}}
 * French: {{t+|fr|monarchisme|m}}
 * German: {{t|de|Monarchismus|m}}
 * Italian: {{t+|it|monarchismo|m}}
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|monarşîzm|f}}, {{t+|kmr|keyperestî|f}}
+{{trans-mid}}
 * Manx: {{t|gv|ard-reeaghys|m}}
 * Norwegian:
 *: Bokmål: {{t|nb|monarkisme|m}}
@@ -36,7 +36,9 @@ Borrowed from {{bor|en|fr|monarchisme}}
 * Polish: {{t|pl|monarchizm|m}}
 * Romanian: {{t+|ro|monarhism|m}}, {{t+|ro|regalism|m}}
 * Russian: {{t+|ru|монархизм|m}}
-* Serbo-Croatian: {{t|sh|монархизам|m}}, {{t+|sh|monarhizam|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|монархизам|m}}
+*: Roman: {{t+|sh|monarhizam|m}}
 * Spanish: {{t|es|monarquismo|m}}
 * Swedish: {{t|sv|monarkism|c}}
 * Ukrainian: {{t|uk|монархізм|m}}
