t+cmn:[[君主主义]] t+cmn:[[君主主義]] ([[WT:EDIT|Assisted]]) <monarchism#63659043>

--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -17,7 +17,7 @@ Borrowed from {{bor|en|fr|monarchisme}}
 {{trans-top|advocacy of the monarchistic political system}}
 * Catalan: {{t|ca|monarquisme|m}}
 * Chinese:
-*: Mandarin: {{t-needed|cmn}}
+*: Mandarin: {{t|cmn|君主主义}}, {{t|cmn|君主主義|tr=jūnzhǔzhǔyì}}
 * Czech: {{t|cs|monarchismus|m}}
 * Danish: {{t|da|monarkisme|c}}
 * Dutch: {{t+|nl|monarchisme|m}}
