--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -29,6 +29,7 @@ Borrowed from {{bor|en|fr|monarchisme}}
 * Greek: {{t+|el|μοναρχισμός|m}}
 * Hungarian: {{t|hu|monarchizmus}}
 * Italian: {{t+|it|monarchismo|m}}
+* Korean: {{t|ko|군주주의}}
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|monarşîzm|f}}, {{t+|kmr|keyperestî|f}}
 {{trans-mid}}
