--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -34,6 +34,8 @@ Borrowed from {{bor|en|fr|monarchisme}}
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|monarşîzm|f}}, {{t+|kmr|keyperestî|f}}
 {{trans-mid}}
+* Latvian: {{t|lv|monarhisms|m}}
+* Lithuanian: {{t|lt|monarchizmas|m}}
 * Manx: {{t|gv|ard-reeaghys|m}}
 * Norwegian:
 *: Bokmål: {{t|nb|monarkisme|m}}
