--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -55,7 +55,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 *: Roman: {{t+|sh|dȃ|sc=Latn}}
 * Slovak: {{t+|sk|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
 * Slovene: {{t+|sl|ja}}
-* Spanish: {{t+|es|sí}}, {{t|es|seh}}
+* Spanish: {{t+|es|sí}}, {{t|es|seh}}, {{t|es|sipi}}
 * Swedish: {{t+|sv|ja|n}}
 * Thai: {{t+|th|เออ}}
 * Ukrainian: {{t|uk|еге́}}
