--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -25,6 +25,7 @@ From {{inh|nl|dum|wasschen}}, from {{inh|nl|odt|wascan}}, from {{inh|nl|gem-pro|
 * {{l|nl|afwassen}}
 
 =====Descendants=====
+* {{desc|af|was}}
 * {{desc|brc|wasi}}
 * {{desc|dcr|wasch}}, {{l|dcr|was}}
 * {{desc|skw|was}}
