/* Middle English */ <dame#63686558>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -347,6 +347,20 @@ From {{bor|enm|fro|dame}}, from {{der|enm|la|domina}}.
 
 ===Etymology 3===
 
+====Noun====
+{{head|enm|noun}}
+
+# {{alt form|enm|damey}}
+
+===Etymology 4===
+
+====Noun====
+{{head|enm|noun}}
+
+# {{lb|enm|when preceding labials}} {{alt form|enm|dan}}
+
+===Etymology 5===
+
 ====Verb====
 {{head|enm|verb}}
 
