--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -78,6 +78,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 
 =====Descendants=====
 * {{desc|tcs|pig}}
+* {{desc|tpi|pik}}
 * {{desc|bor=1|abe|piks}} {{q|from "pigs"}}
 * {{desc|bor=1|pqm|piks}} {{q|from "pigs"}}
 
