--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -175,6 +175,24 @@ From {{inh|fo|non|mega}}, from {{inh|fo|gem-pro|*maganą}}, from {{der|fo|ine-pr
 
 ----
 
+==German==
+
+===Etymology===
+{{conversion|de|mega-}}.
+
+===Adverb===
+{{de-adv}}
+
+# {{tlb|de|colloquial|somewhat|_|juvenile}} [[very]], [[bare]], [[mad]]
+#: {{syn|de|Thesaurus:sehr}}
+#: {{ux|de|Das ist megaeinfach.|It’s bare easy.}}
+#: {{ux|de|Er freute sich mega.|He was gassed mad.}}
+
+====Usage notes====
+Often written together with the next word, as if compounding a new word, or analyzed as prefix.
+
+----
+
 ==Icelandic==
 
 ===Etymology===
