--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -103,7 +103,8 @@ From {{bor|eo|fro|abandoner}}.
 {{back-form|pt|abandonar}}.
 
 ====Pronunciation====
-{{pt-IPA|abandôno}}
+{{pt-IPA|abandôno}} 
+** {{audio|pt|pt-br-abandono.ogg|Audio (Center-West) }}
 * {{a|South Brazil}} {{IPA|pt|/a.bɐ̃.ˈdo.no/}}
 * {{hyphenation|pt|a|ban|do|no}}
 
