--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -26,9 +26,9 @@ From {{suffix|en|bend|t}}.
 #: {{ux|en|They were '''bent''' on mischief.}}
 #* {{quote-journal|en|date=July 7, 2017|author=Ignatiy Vishnevetsky| title=The ambitious War For The Planet Of The Apes ends up surrendering to formula| work=The Onion AV Club| url=http://www.avclub.com/review/ambitious-war-planet-apes-ends-surrendering-formul-257757| passage={{...}}in the ape posse, '''bent''' on vengeance, traversing landscapes clothed in snow and bristling with California red fir and silver pine, spooking human stragglers, and running across fresh graves as they search for the nameless colonel and try to piece together why the humans are killing each other. }}
 # (Of a person) leading a life of [[crime]].
-# {{lb|en|slang|football}} [[inaccurate]]ly [[aim]]ed
+# {{lb|en|slang|football}} [[inaccurate|Inaccurate]]ly [[aim]]ed.
 #: {{ux|en|That shot was so '''bent''' it left the pitch.}}
-# {{lb|en|colloquial|chiefly|US}} Suffering from [[the bends]]
+# {{lb|en|colloquial|chiefly|US}} Suffering from [[the bends]].
 # {{lb|en|slang}} [[high|High]] from both [[marijuana]] and [[alcohol]].
 #: {{ux|en|Man, I am so '''bent''' right now!}}
 
