--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -63,6 +63,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Azerbaijani: {{t+|az|bükmək}}, {{t+|az|əymək}}
 * Belarusian: {{t|be|згіна́ць|impf|sc=Cyrl}}, {{t+|be|гнуць|impf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|извивам}}, {{t+|bg|превивам}}
+* Chechen: {{t|ce|сатта}}
 * Chinese:
 *: Mandarin: {{t+check|cmn|屈|tr=qū|sc=Hani}}, {{t+check|cmn|曲|tr=qū|sc=Hani}}, {{t+|cmn|彎|sc=Hani}}, {{t+|cmn|弯|tr=wān|sc=Hani}}
 * Classical Nahuatl: {{t|nci|cuēloā}}, {{t|nci|cuelpachoā}}
