--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -80,7 +80,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Hebrew: {{t+|he|כופף|tr=koféf}}
 * Hungarian: {{t+|hu|hajlít}}, {{t+|hu|görbít}}
 * Icelandic: {{t+|is|beygja}}
-* Ingush: {{t|inh|саттае}}
+* Ingush: {{t|inh|соттае}}
 * Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
 * Japanese: {{t+|ja|曲げる|tr=mageru}}
 * Khmer: {{t-needed|km}}
