--- a/en/l/lentor.801178.wikitext
+++ b/en/l/lentor.801178.wikitext
@@ -6,11 +6,13 @@
 ===Noun===
 {{en-noun|-|s}}
 
-# [[slowness]], [[sluggishness]]
-# {{lb|en|obsolete|physics}} [[viscosity]]
+# {{lb|en|obsolete|chiefly|medicine}} [[viscosity|Viscosity]], thickness (chiefly of blood).
+#*'''1797''', {{w|Hester Lynch Piozzi}}, ''Thraliana'', 1 September:
+#*:I find there was no wrong Presentation, only a '''Lentor''' in the pains perhaps {{...}}.
 #* {{quote-book|en|year=1744|author=George Berkeley|title=Siris|passage=There is a '''lentor''' or smoothness in the blood of healthy strong people {{...}}}}
-#* '''1955''', Vladimir Nabokov, ''Lolita''
-#*: {{...}} she walked through dilating space with the '''lentor''' of one walking under water {{...}}
+# [[slowness|Slowness]], [[sluggishness]].
+#* '''1955''', {{w|Vladimir Nabokov}}, ''Lolita'':
+#*:[S]he walked through dilating space with the '''lentor''' of one walking under water {{...}}.
 
 ----
 
