Canonical name: Filipino –> Tagalog <bahasa#63729428>

--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -27,15 +27,6 @@ Borrowed from {{bor|nl|id|bahasa}}, ultimately from {{der|nl|sa|भाषा||la
 # {{lb|nl|colloquial|Netherlands}} [[Indonesian]] language.
 
 ----
-==Filipino==
-
-===Etymology===
-Derived from {{der|tl|sa|भाषा||language}}.
-
-===Noun===
-{{head|tl|noun}}
-# {{lb|tl|dated}} [[language]].
-----
 
 ==Indonesian==
 
@@ -246,6 +237,17 @@ From {{der|ms|sa|भाषा||language}}.
 * {{R:PRPM}}
 
 [[Category:ms:Language]]
+
+----
+
+==Tagalog==
+
+===Etymology===
+Derived from {{der|tl|sa|भाषा||language}}.
+
+===Noun===
+{{head|tl|noun}}
+# {{lb|tl|dated}} [[language]].
 
 ----
 
