--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -215,6 +215,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Jeju: {{tt|jje|도새기|tr=dosaegi}}
 * Jingpho: {{tt|kac|wa'}}
 * Kabardian: {{tt|kbd|кхъуэ}}
+* Kalmyk: {{t|xal|һаха}}
 * Kannada: {{tt+|kn|ಹಂದಿ}}
 * Karelian: {{tt|krl|počči}}
 * Kazakh: {{tt+|kk|шошқа}}
