--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -63,6 +63,7 @@ From {{inh|de|gmh|bitten}}, from {{inh|de|goh|bitten}}, from {{inh|de|gmw-pro|*b
 
 ====Derived terms====
 * {{l|de|abbitten}}
+* {{l|de|Bitten}}
 
 ===Further reading===
 * {{R:Duden}}
