/* Translations */ <miss out#63751238>

--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -32,9 +32,9 @@
 * Danish: {{t|da|gå glip af}}
 * Finnish: {{t|fi|jäädä paitsi}}, {{t+|fi|menettää}}
 * French: {{t+|fr|manquer}}, {{t+|fr|perdre}}, {{t+|fr|laisser passer}}, {{t+|fr|louper}}
-* German: {{t+|de|verpassen}}, {{t+|de|verfehlen}}, {{t+|de|auslassen}}
-{{trans-mid}}
+* German: {{t+|de|verpassen}}
 * Hungarian: {{t+|hu|kihagy}}, {{t+|hu|lemarad}}, {{t+|hu|kimarad}}, {{t+|hu|elszalaszt}}
+{{trans-mid}}
 * Italian: {{t+|it|perdere}}
 * Japanese: {{t+|ja|逃す|tr=のがす, nogasu|sc=Jpan}}
 * Korean: {{t-needed|ko}}
@@ -44,6 +44,16 @@
 * Slovak: {{t|sk|zmeškať}}, {{t|sk|zmeškávať}}
 * Spanish: {{t+|es|perder}} {{qualifier|pronominal}}
 * Swedish: {{t+|sv|missa}}
+{{trans-bottom}}
+
+{{trans-top|to leave out, to omit}}
+* German: {{t+|de|auslassen}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+* German: {{t+|de|verfehlen}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ===See also===
