--- a/en/a/automania.856205.wikitext
+++ b/en/a/automania.856205.wikitext
@@ -7,6 +7,7 @@ Of {{suffix|en|auto|-mania}}.<ref>{{R:OED Online|entry=automania|pos=''n.''{{sup
 {{en-noun|-}}
 
 # {{lb|en|US}} An [[enthusiasm]] for [[motor vehicle]]s and [[motoring]].
+#* {{quote-journal|en|1902||The Automaniac|Massachusetts Medical Journal||551|There seems to be need of a term to designate these new terrors of our streets, those speed crazed paranoiacs who are now doing so much to bring the automobile into disrepute.{{...}} Why not adopt the name “'''automania'''” for the disease and the automaniac to designate the person afflicted by it?|titleurl=https://babel.hathitrust.org/cgi/pt?id=mdp.39015076619421&view=1up&seq=581}}
 #* {{quote-journal|en|1906||Farmers’ problems|Farm Journal||178|The fact is, some of these people are seized with with '''automania''', and if they could not go fast, they would not care to go at all. '''Automania''' is the feverish desire to move at the greatest rate of speed of which the motor is capable, with no regard for the life of bipeds or quadrupeds.|month=May|titleurl=https://babel.hathitrust.org/cgi/pt?id=uva.x002211805&view=1up&seq=18&q1=automania}}
 
 ===References===
