--- a/en/f/FEMA.26217.wikitext
+++ b/en/f/FEMA.26217.wikitext
@@ -8,7 +8,8 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{initialism of|en|{{w|Federal Emergency Management Agency}}}}
+# {{lb|en|US}} {{initialism of|en|{{w|Federal Emergency Management Agency}}}}
+#* {{quote-journal|en|author=Christopher Flavelle|title=How Government Decisions Left Tennessee Exposed to Deadly Flooding|work=The New York Times|date=2021-08-26|url=https://www.nytimes.com/2021/08/26/climate/tennessee-flood-damage-impact.html|issn=0362-4331|passage='''FEMA''' produces maps showing which areas are at risk from flooding, so that homeowners, builders and local officials can make informed decisions about where and how to build houses.}}
 
 ===Anagrams===
 * {{anagrams|en|a=aefm|FMEA|fame|mafe}}
