--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -181,6 +181,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa teknis
 | bahasa terbalik
 | bahasa tingkat rendah
+| bahasa tonal
 | bahasa tubuh
 | bahasa tulis
 | bahasa tutur
