/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <bahasa#63764215>

--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -44,6 +44,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 ## {{lb|id|linguistics}} a body of words, and set of methods of combining them (called a grammar), understood by a community and used as a form of communication.
 ##: {{uxi|id|'''bahasa''' [[Indonesia]]|Indonesian '''language'''}}
 ## {{lb|id|computing}} a {{l|en|computer language}}; a {{l|en|machine language}}.
+##: {{syn|id|bahasa komputer|bahasa mesin}}
 # {{l|en|decorum}}, appropriate social behavior.
 
 ====Alternative forms====
