--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -40,7 +40,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 ===Noun===
 {{id-noun|pl=bahasa-bahasa}}
 
-# {{l|en|language}},
+# {{l|en|language}}:
 ## {{lb|id|linguistics}} a body of words, and set of methods of combining them (called a grammar), understood by a community and used as a form of communication.
 ##: {{uxi|id|'''bahasa''' [[Indonesia]]|Indonesian '''language'''}}
 ## {{lb|id|computing}} a {{l|en|computer language}}; a {{l|en|machine language}}.
