--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -112,16 +112,27 @@ Borrowed from {{bor|id|jv|malam|tr={{l|jv|ꦩꦭꦩ꧀|tr=-}}|t=}}, probably fro
 
 ==Malay==
 
+===Etymology===
+From {{inh|ms|poz-pro|*malem|t=night, darkness}}.
+
 ===Pronunciation===
+* {{IPA|ms|/malam/}}
+* {{rhymes|ms|alam|lam|am}}
 * {{audio|ms|ms-MY-malam.ogg|Audio (MY)}}
 
 ===Noun===
 {{ms-noun|j=مالم}}
 
 # [[night]]
+#: {{uxi|ms|Selamat '''malam'''|Good'''night'''}}
+#: {{ant|ms|siang|hari}}
+
+====Derived terms====
+{{der4|ms|semalam}}
 
 ===Further reading===
 * {{R:PRPM}}
+* [https://www.trussel2.com/acd/acd-s_m.htm#11519 Austronesian Comparative Dictionary - *malem]
 
 ----
 
