--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -2,6 +2,9 @@
 ==English==
 {{wikipedia|mul=gamble|dab=Gamble (disambiguation)}}
 
+===Alternative forms===
+* {{l|en|gambal}} {{qualifier|obsolete}}
+
 ===Etymology===
 From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, variant of {{der|en|enm|gamenen}}, from {{der|en|ang|gæmnian}}, {{m|ang|gamnian}}, {{m|ang|gamenian||to joke; play}}, related to Old English {{m|ang|gamen||joy; mirth; pleasure; entertainment; pastime; sport; game}}, equivalent to {{suffix|en|game|le}}. Compare {{cog|gmq-oda|gammel}}, {{cog|gmh|gamel||pleasure; fun}}. More at {{l|en|game}}.
 
