--- a/en/b/baling.855676.wikitext
+++ b/en/b/baling.855676.wikitext
@@ -38,6 +38,48 @@
 
 ----
 
+==Indonesian==
+
+===Pronunciation===
+* {{IPA|id|/ˈbalɪŋ/}}
+* {{hyphenation|id|ba|ling}}
+
+===Etymology 1===
+
+====Noun====
+{{id-noun|head=|pl=-}}
+
+# [[stone]] [[tied]] to a [[rope]] that is [[thrown]] by twisting the [[rope]].
+
+====Derived terms====
+{{der4|id|
+| baling-baling
+| berbaling
+| bolang-baling
+| membaling
+| membalingkan
+| pembaling
+|}}
+
+===Etymology 2===
+
+====Noun====
+{{id-noun|head=|pl=-}}
+
+# {{vern|fourfinger threadfin}} ({{taxlink|Eleutheronema tetradactylum|species|ver=210827}}).
+
+===Etymology 3===
+From Malay {{bor|id|ms}}
+
+====Adjective====
+{{id-adj|head=|pl=-}}
+
+# {{lb|id|dialect}} [[imbalance]]
+
+===Further reading===
+* {{R:KBBI Daring}}
+
+----
 ==Malay==
 
 ===Pronunciation===
