/* English */ <ill-conceived#63769165>

--- a/en/i/ill-conceived.720288.wikitext
+++ b/en/i/ill-conceived.720288.wikitext
@@ -1,11 +1,10 @@
 ==English==
 
-{{root|en|ine-pro|*keh₂p-}}
-
 ===Adjective===
 {{en-adj|head=[[ill]]-[[conceived]]}}
 
 # Not properly [[planned]] or [[thought through]].
+#: {{syn|en|misbegotten}}
 #* {{quote-journal|en|year=1962|month=October|author=Brian Haresnape|title=Focus on B.R. passenger stations|journal=Modern Railways|pages=250-251|text=Elegant brick and stone buildings, with iron and glass canopies and decorative wooden scalloping and fencing&mdash;all evidencing care on the part of the architect to produce a pleasing, well-planned building&mdash;were submerged beneath a profusion of '''ill-conceived''' additions and camouflaged by vulgar paint schemes; and the original conception was lost.}}
 
 ====Translations====
