--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -14,12 +14,12 @@ Morphologically {{suffix|en|blow|n}}.
 ===Adjective===
 {{en-adj|-}}
 
-# [[distended]], [[swollen]] or [[inflated]]
+# [[distended|Distended]], [[swollen]], or [[inflated]].
 #: {{ux|en|Cattle are said to be '''blown''' when gorged with green food which develops gas.}}
-# [[panting]] and [[out of breath]]
-# {{lb|en|of glass}} [[form|Formed]] by [[blowing]]
+# [[panting|Panting]] and [[out of breath]].
+# {{lb|en|of glass}} [[form|Formed]] by [[blowing]].
 # Under the influence of [[drug]]s, especially [[marijuana]].
-# {{lb|en|obsolete}} [[stale]]; [[worthless]]
+# {{lb|en|obsolete}} [[stale|Stale]]; [[worthless]].
 #* {{RQ:Scott Tales of My Landlord 1|volume=II|chapter=II|page=33|passage=[T]wo or three horsemen, [...] appeared returning at full gallop, their horses much '''blown''', and the men apparently in a disordered flight.}}
 # Covered with the eggs and larvae of flies; [[flyblown]].
 # {{lb|en|automotive}} Given a [[hot rod]] [[blower]].
