--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -307,6 +307,9 @@ From {{bor|uz|ru|сыр}}.
 
 # [[cheese]]
 
+====Declension====
+{{uz-decl-noun}}
+
 ===Etymology 2===
 From {{bor|uz|ar|سِرّ}}.
 
@@ -314,6 +317,9 @@ From {{bor|uz|ar|سِرّ}}.
 {{uz-noun}}
 
 # [[secret]]
+
+====Declension====
+{{uz-decl-noun}}
 
 ----
 
