--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -7,7 +7,8 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 
 ===Pronunciation===
 * {{enPR|frăkʹshən}}, {{IPA|en|/ˈfɹæk.ʃən/}}
-** {{audio|en|LL-Q1860 (eng)-Vealhurl-fraction.wav|Audio (UK)}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-fraction.wav|Audio (UK)}}
+* {{hyph|en|frac|tion}}
 * {{rhymes|en|ækʃən}}
 
 ===Noun===
