--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -30,6 +30,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Albanian: {{t|sq|ermelina|?}}
 * Arabic: {{t|ar|قَاقِم|m}}
 * Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}, {{t+|hy|ախազ}}
+* Bashkir: {{t|ba|аҫ}}
 * Basque: {{t|eu|erbinude zuri}}
 * Belarusian: {{t|be|гарнаста́й|m}}
 * Breton: {{t+|br|erminig|m}}
