t+rom:[[kaj]] ([[WT:EDIT|Assisted]]) <at#63791517>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -148,6 +148,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Polish: {{t+|pl|w}}, {{t+|pl|u}}, {{t+|pl|przy}}
 * Portuguese: {{t+|pt|em}} (not distinct from the senses expressed in English by ''in'' or ''on''), {{t+|pt|por}}, {{t+|pt|a}} (unproductive; only used with a few words, as in ''à mesa'': at the table)
 * Rapa Nui: {{t|rap|i}}
+* Romani: {{t|rom|kaj}}
 * Romanian: {{t+|ro|la}}
 * Russian: {{t+|ru|в}}, {{t+|ru|на}}, {{t+|ru|у}}, {{t+|ru|во́зле}}
 * Slovak: {{t+|sk|v}}, {{t|sk|pri}}, {{t+|sk|na}}
