--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -110,6 +110,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Aramaic:
 *: Hebrew: {{tt|arc|חזירא|tr=ħzīrā’|m}}, {{tt|arc|חזירתא|tr=ħzīrtā’|f}}
 *: Syriac: {{tt|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{tt|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
+* Archi: {{t|aqc|боӏкь}}
 * Armenian: {{tt+|hy|խոզ}}
 * Aromanian: {{tt|rup|porcu|m}}
 * Assamese: {{tt|as|গাহৰি}}
