/* Derived terms */ <weight#63813866>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -60,7 +60,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 
 ====Derived terms====
 {{der3|en
-|balance weight
+|[[balance weight]], [[balanceweight]]
 |bantamweight
 |biweight
 |[[body weight]], [[bodyweight]]
