--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -302,7 +302,7 @@ Occasionally, in very formal or official registers, ''dame'' can be used as a ti
 {{ja-romaji}}
 
 # {{ja-romanization of|だめ}}
-
+# {{ja-romanization of|ダメ}}
 ----
 
 ==Middle English==
