--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -46,7 +46,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 
 ====Derived terms====
 {{der3|en
-|Barry Island|Cape Clear Island|coney island|desert island|Farne Islands|floating island
+|Barry Island|Cape Clear Island|coney island|Deer Island|desert island|Farne Islands|floating island
 |Gough Island|Grand Island|Great Barrier Island
 |Green Island|Hayling Island|heat island|high island|Holy Island
 |interisland|Island County
