--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -47,7 +47,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 ====Derived terms====
 {{der3|en
 |Barry Island|Cape Clear Island|coney island|Deer Island|desert island|Farne Islands|floating island
-|Gough Island|Grand Island|Great Barrier Island
+|French Island|Gough Island|Grand Island|Great Barrier Island
 |Green Island|Hayling Island|heat island|high island|Holy Island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
