Added category <mossback#63835757>

--- a/en/m/mossback.720205.wikitext
+++ b/en/m/mossback.720205.wikitext
@@ -69,5 +69,6 @@ Sense 2.4 (“largemouth bass”) may refer to the back of the fish being a dark
 
 [[Category:English compound nouns]]
 [[Category:en:American Civil War]]
+[[Category:en:People]]
 [[Category:en:Sunfish]]
 [[Category:en:Turtles]]
