--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|dated}} A person who works in [[metal]].
+# {{lb|en|dated}} A person who works in [[metal]] (type of material).
 #: {{syn|en|metalworker}}
 # A person skilled in [[metallurgy]].
 
