--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -290,7 +290,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sonotoki}}, {{t+|ja|だから|tr=dakara}}
 * Kamta: {{t|rkt|তাহালে}}
-* Khmer: {{t+|km|ដូច្នេះ|tr=doochneh|sc=Khmr}}, {{t|km|អញ្ចឹង|tr=ɑñchəng|sc=Khmr}}
+* Khmer: {{t+|km|ដូច្នេះ}}, {{t|km|អញ្ចឹង}}
 * Korean: {{t+|ko|그러면}}
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|pa}}, {{t+|kmr|de}}, {{t+|kmr|madem}}
