--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -18,10 +18,11 @@
 ====Translations====
 {{trans-top|a utensil}}
 * Bulgarian: {{t|bg|черпак}}
+* Catalan: {{t|ca|sàssola|f}}
 * French: {{t+|fr|écope|f}}
-* Italian: {{t|it|aggottatoio|m}}
-* Maori: {{t|mi|tīheru}}, {{t|mi|tatā}}
+* Italian: {{t|it|aggottatoio|m}}, {{t|it|sassola|f}}
 {{trans-mid}}
+* Maori: {{t|mi|tīheru}}, {{t|mi|tatā}}
 * Ngazidja Comorian: {{t|zdj|upvo|c11|c10a}}
 * Russian: {{t+|ru|черпак|m}}
 * Swedish: {{t+|sv|öskar|n}}
