--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -526,7 +526,8 @@ From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|no|at}}. Probably from {{inh|d
 From {{inh|da|non|at}}, cognate with {{cog|sv|att}}, {{cog|no|å}}. Originally the same word as the preposition {{inh|da|non|at||at, to}}, from {{inh|non|gem-pro|*at}}, cognate with {{cog|en|at}}. {{doublet|da|ad}}). In the West Germanic languages, a different preposition, {{m|gem-pro|*tō||to}}, serves as the infinitive marker, cf {{cog|en|to}}, {{cog|de|zu}}, {{cog|nl|te}}.
 
 ====Pronunciation====
-* {{IPA|da|[ad̥]|[a]|[ʌ]}}
+* {{IPA|da|[ʌ]|[ɒ̽]}}
+* {{q|at the beginning of a sentence}} {{IPA|da|[ʌ]|[ɒ̽]|/ad/|[æt]}}
 * {{homophones|da|og}}
 
 ====Particle====
