--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -768,7 +768,7 @@ From {{der|lld|la|actus}}.
 ==Latin==
 
 ===Etymology===
-From {{inh|la|ine-pro|*h₂et-|*h₂éti}}
+From {{inh|la|ine-pro|*h₂et-|*h₂éti}}<ref>{{R:itc:EDL}}</ref>
 
 ===Pronunciation===
 * {{la-IPA}}
