t+nl:[[Noord-Afrikaans]] t+nl:[[Noord-Afrikaan]] t+nl:[[Noord-Afrikaanse]] ([[WT:EDIT|Assisted]]) <North African#63869557>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -9,6 +9,7 @@
 {{trans-top|of or pertaining to North Africa}}
 * Czech: {{t|cs|severoafrický}}
 * Danish: {{t|da|nordafrikansk}}
+* Dutch: {{t+|nl|Noord-Afrikaans}}
 * German: {{t+|de|nordafrikanisch}}
 * Ido: nord-Afrikana
 * Italian: {{t|it|nordafricano}}
@@ -27,6 +28,7 @@
 
 ====Translations====
 {{trans-top|native or inhabitant of North Africa}}
+* Dutch: {{t+|nl|Noord-Afrikaan|m}}, {{t+|nl|Noord-Afrikaanse|f}}
 * German: {{t+|de|Nordafrikaner|m}}, {{t+|de|Nordafrikanerin|f}}
 * Ido: nord-Afrikano
 {{trans-mid}}
