--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -11,6 +11,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 
 ===Pronunciation===
 * {{enPR|kwŏdʹrənt}}, {{IPA|en|/ˈkwɑd.ɹənt/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-quadrant.wav|Audio (Southern England)}}
 
 ===Noun===
 {{en-noun}}
