t+de:[[CD-ROM]] ([[WT:EDIT|Assisted]]) <CD-ROM#63911877>

--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -24,7 +24,7 @@
 * Esperanto: {{t|eo|KD-NLM}}
 * Finnish: {{t|fi|CD-ROM-levy}}, {{t|fi|CD-ROM}}
 * French: {{t+|fr|cédérom|m}}
-* German: {{t-needed|de}}
+* German: {{t+|de|CD-ROM|f}}
 * Greek: ''as in English''
 * Hindi: {{t-needed|hi}}
 {{trans-mid}}
