t+de:[[aufnehmen]] ([[WT:EDIT|Assisted]]) <consume#63911887>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -177,7 +177,7 @@ From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|con
 * Finnish: {{t+|fi|kuluttaa}}
 {{trans-mid}}
 * French: {{t-needed|fr}}
-* German: {{t-needed|de}}
+* German: {{t+|de|aufnehmen}}
 * Italian: {{t+|it|assorbire}}
 * Russian: {{t-needed|ru}}
 * Spanish: {{t-needed|es}}
