/* Translations */ move translations over from [[decay]]:rot; reason I put them in a box is because I'm unsure about transitivity <rot#63915357>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -128,6 +128,35 @@ From {{inh|en|enm|roten}}, {{m|enm|rotten}}, from {{inh|en|ang|rotian||to rot, b
 {{trans-mid}}
 {{trans-bottom}}
 
+{{checktrans-top|moved over from [[decay]]:rot}}
+* Armenian: {{t+|hy|փտել}}
+* Bulgarian: {{t+|bg|гния}}, {{t+|bg|загнивам}}
+* Chinese:
+*: Mandarin: {{t+|cmn|腐烂|tr=fǔlàn|sc=Hani}}, {{t+|cmn|腐爛|tr=fǔlàn|sc=Hani}}
+* Czech: {{t+|cs|hnít}}
+* Danish: {{t|da|rådne}}
+* Dutch: {{t+|nl|verrotten}}, {{t|nl|slecht worden}}
+* Finnish: {{t+|fi|maatua}}, {{t+|fi|pilaantua}}, {{t+|fi|lahota}}, {{t+|fi|mädäntyä}}
+* French: {{t+|fr|pourrir}}
+* Georgian: {{t|ka|ლპება}}, {{t|ka|იხრწნება}}
+* German: {{t+|de|verfaulen}}, {{t+|de|verrotten}}, {{t+|de|verwesen}}
+* Greek:
+*: Ancient Greek: {{t|grc|σήπω|alt=σήπομαι}}
+{{trans-mid}}
+* Hebrew: {{t|he|התקלקל|m|tr=hitkalkel}}
+* Hungarian: {{t+|hu|korhad}}, {{t+|hu|rothad}}, {{t|hu|szuvasodik}}, {{t|hu|elmállik}}
+* Latvian: {{t+|lv|pūt}}
+* Maori: {{t|mi|whakapopo}}, {{t|mi|koropungapunga}}
+* Polish: {{t+|pl|gnić}}
+* Portuguese: {{t+|pt|apodrecer}}, {{t+|pt|estragar}}, {{t|pt|putrefazer}}
+* Quechua: {{t+|qu|ismuy}}
+* Romanian: {{t+|ro|descompune}}
+* Russian: {{t+|ru|разлага́ться}}, {{t+|ru|гнить}}
+* Spanish: {{t+|es|pudrir|alt=pudrirse}}
+* Swedish: {{t+|sv|ruttna}}, {{t+|sv|sönderfalla}}, {{t+|sv|förfalla}}, {{t+|sv|sönderdelas}}
+* Turkish: {{t+|tr|çürümek}}
+{{trans-bottom}}
+
 ===Noun===
 {{en-noun|~}}
 
