t+ko:[[겨울잠쥐]] ([[WT:EDIT|Assisted]]) <dormouse#63927281>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -53,6 +53,7 @@ The word is sometimes conjectured to come from an {{cog|xno|-}} derivative of {{
 * Irish: {{t|ga|luch chodlamáin|f}}, {{t|ga|dallóg fhéir|f}}
 * Italian: {{t+|it|ghiro|m}}, {{t+|it|moscardino|m}}, {{t+|it|muscardinide|m}}
 * Japanese: {{t|ja|ヤマネ|tr=yamane}}
+* Korean: {{t|ko|겨울잠쥐}}
 * Ladin: {{t|lld|ghiro|m}}
 * Latin: {{t|la|glīs|m}}, {{t|la|nītēdula|f}}
 {{trans-mid}}
