/* Derived terms */ <blow#63932311>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -545,6 +545,7 @@ From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blÄ
 |body blow
 |come to blows
 |[[death blow]], [[deathblow]]
+|[[hammer blow]], [[hammerblow]]
 |low blow
 }}
 
