t+lt:[[sala]] ([[WT:EDIT|Assisted]]) <island#63934290>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -389,7 +389,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Latgalian: {{qualifier|village}} {{t|ltg|sola}}
 * Latin: {{t-needed|la}}
 * Latvian: {{t+|lv|sala|f}}
-* Lithuanian: {{t-needed|lt}}
+* Lithuanian: {{t+|lt|sala|f}}
 * Macedonian: {{t|mk|остров|m}}
 * Maltese: {{t-needed|mt}}
 * Norwegian:
